--- a/bookshelf-apps1/index.html
+++ b/bookshelf-apps1/index.html
@@ -10,49 +10,20 @@
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   </head>
-  <body class="container">
-    <!-- <header class="head_bar">
-      <h1 class="head_bar__title">Bookshelf Apps</h1>
-    </header> -->
-    <nav class="navbar navbar-expand-lg bg-light">
+  <body>
+    <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bookshelf Apps</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Dropdown </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul> -->
-          <section class="search_section">
-            <form class="d-flex justify-content-end" role="search">
-              <input class="form-control me-2" type="text" id="searchBookTitle" placeholder="Cari Buku" aria-label="Search" />
-              <button class="btn btn-outline-success" id="searchSubmit" type="submit">Cari</button>
-            </form>
-          </section>
-        </div>
+        <a class="navbar-brand">Bookshelf Apps</a>
+        <form class="d-flex" id="searchBook">
+          <input class="form-control me-2" id="searchBookTitle" type="text" placeholder="Cari Judul Buku" aria-label="Search">
+          <button class="btn btn-outline-success" id="searchSubmit" type="submit">Cari</button>
+        </form>
       </div>
     </nav>
-    <main>
+
+    <main class="container">
       <div class="row mt-5">
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
           <section class="input_section">
             <div class="container">
               <div class="card">
@@ -72,63 +43,45 @@
 
                     <div class="mb-3">
                       <label for="inputBookYear" class="form-label">Tahun</label>
-                      <input type="text" class="form-control" id="inputBookYear" required />
+                      <input type="number" class="form-control" id="inputBookYear" required />
                     </div>
 
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="inputBookIsComplete" />
+                      <input class="form-check-input" type="checkbox" id="inputBookIsComplete" onclick="changeText()"/>
                       <label class="form-check-label" for="inputBookIsComplete"> Selesai dibaca </label>
                     </div>
 
-                    <button class="btn btn-primary btn-block mt-2" id="bookSubmit" type="submit">Masukkan Buku ke rak <span>Belum selesai dibaca</span></button>
+                    <button class="btn btn-primary btn-block mt-2" id="bookSubmit" type="submit">Masukkan Buku ke rak <strong id="textSubmit">Belum selesai dibaca</strong></button>
                   </form>
                 </div>
               </div>
             </div>
           </section>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
           <section class="book_shelf">
             <div class="container">
               <div class="card">
-                <div class="card-header">Belum selesai dibaca</div>
+                <div class="card-header bg-warning">Belum selesai dibaca</div>
 
                 <div class="card-body">
                   <div id="incompleteBookshelfList" class="book_list">
-                    <article class="book_item">
-                      <h3>Book Title</h3>
-                      <p>Penulis: John Doe</p>
-                      <p>Tahun: 2002</p>
-
-                      <div class="action">
-                        <button class="btn btn-success">Selesai dibaca</button>
-                        <button class="btn btn-danger">Hapus buku</button>
-                      </div>
-                    </article>
+                    
                   </div>
                 </div>
               </div>
             </div>
           </section>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
           <section class="book_shelf">
             <div class="container">
               <div class="card">
-                <div class="card-header">Selesai dibaca</div>
+                <div class="card-header bg-success text-white">Selesai dibaca</div>
 
                 <div class="card-body">
                   <div id="completeBookshelfList" class="book_list">
-                    <article class="book_item">
-                      <h3>Book Title</h3>
-                      <p>Penulis: John Doe</p>
-                      <p>Tahun: 2002</p>
-
-                      <div class="action">
-                        <button class="btn btn-warning">Belum selesai di Baca</button>
-                        <button class="btn btn-danger">Hapus buku</button>
-                      </div>
-                    </article>
+                   
                   </div>
                 </div>
               </div>
@@ -138,10 +91,6 @@
       </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="js/main.js" type="text/javascript"></script> -->
-    <script src="js/script.js"></script>
-    <script src="js/storage.js"></script>
-    <script src="js/dom.js"></script>
+    <script src="js/baru.js"></script>
   </body>
 </html>
